# Ticket-System-2024-deprecated

./: .gitignore  CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/include/: backend_system.h  basic_types.h  config.h  interface_system.h  ticket_system_exceptions.h  ticket_system_settings.h
backend/src/: backend_system.cpp  basic_types.cpp  interface_system.cpp  ticket_system_exceptions.cpp
lib/: CMakeLists.txt
lib/include/: algorithm.h  conststring.h  database.h  dataset.h  filestream.h  info_recorder.h  lib_exceptions.h  list.h  map.h  multimap_db.h  pair.h  pair.hpp  rb_tree.h  set.h  vector.h
lib/src/: algorithm.cpp  filestream.cpp  lib_exceptions.cpp
lib/template/: algorithm.tcc  conststring.tcc  database.tcc  dataset.tcc  filestream.tcc  info_recorder.tcc  list.tcc  map.tcc  multimap_db.tcc  pair.tcc  rb_tree.tcc  set.tcc  vector.tcc
